--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require": {
         "ext-sodium": "*",
         "php": "^7.0",
-        "guzzlehttp/guzzle": "^6.2.1"
+        "guzzlehttp/guzzle": "^6.2.1",
+        "squizlabs/php_codesniffer": "2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5"
